// Harmonic Universe Database Schema

Table users {
  id uuid [pk]
  username varchar [unique, not null]
  email varchar [unique, not null]
  password_hash varchar [not null]
  is_active boolean [default: true]
  is_verified boolean [default: false]
  verification_token varchar [unique]
  verification_token_expires timestamp
  reset_token varchar [unique]
  reset_token_expires timestamp
  refresh_token varchar [unique]
  refresh_token_expires timestamp
  color varchar(7)
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table universes {
  id uuid [pk]
  name varchar(255) [not null]
  description varchar(1000)
  is_public boolean [default: false]
  user_id uuid [not null]
  version integer [default: 1]
  physics_params jsonb
  harmony_params jsonb
  story_points jsonb
  visualization_params jsonb
  ai_params jsonb
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table scenes {
  id uuid [pk]
  name varchar [not null]
  description text
  order integer [default: 0]
  is_active boolean [default: true]
  version integer [default: 1]
  universe_id uuid [not null]
  creator_id uuid [not null]
  physics_overrides jsonb
  harmony_overrides jsonb
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table physics_parameters {
  id uuid [pk]
  name varchar [not null]
  value float [not null]
  unit varchar
  min_value float
  max_value float
  universe_id uuid [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table audio_files {
  id uuid [pk]
  name varchar [not null]
  file_path varchar [not null]
  duration float
  format varchar
  user_id uuid [not null]
  universe_id uuid
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table midi_sequences {
  id uuid [pk]
  name varchar [not null]
  data jsonb [not null]
  duration float
  tempo integer
  universe_id uuid [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table audio_tracks {
  id uuid [pk]
  name varchar [not null]
  type varchar [not null]
  parameters jsonb
  is_active boolean [default: true]
  universe_id uuid [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table visualizations {
  id uuid [pk]
  name varchar [not null]
  type varchar [not null]
  parameters jsonb
  user_id uuid [not null]
  universe_id uuid [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table ai_models {
  id uuid [pk]
  name varchar [not null]
  type varchar [not null]
  parameters jsonb
  is_active boolean [default: true]
  user_id uuid [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

// Relationships
Ref: universes.user_id > users.id [delete: cascade]
Ref: scenes.universe_id > universes.id [delete: cascade]
Ref: scenes.creator_id > users.id [delete: cascade]
Ref: physics_parameters.universe_id > universes.id [delete: cascade]
Ref: audio_files.user_id > users.id [delete: cascade]
Ref: audio_files.universe_id > universes.id [delete: cascade]
Ref: midi_sequences.universe_id > universes.id [delete: cascade]
Ref: audio_tracks.universe_id > universes.id [delete: cascade]
Ref: visualizations.user_id > users.id [delete: cascade]
Ref: visualizations.universe_id > universes.id [delete: cascade]
Ref: ai_models.user_id > users.id [delete: cascade]
